# nespp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bus.cpp  bus.h  cpu.cpp  cpu.h  main.cpp
test/: CMakeLists.txt  cpu_test.cpp
